[project]
name = "vm"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gudzpoz", email = "gudzpoz@live.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "sphinx>=7.2.6",
    "sphinx-lua>=1.1.5",
]
